# keyframe

./: .gitignore  Cargo.toml  README.md  com.mattjakeman.Keyframe.json  meson.build
.github/workflows/: main.yml
data/: com.mattjakeman.Keyframe.appdata.xml.in  com.mattjakeman.Keyframe.desktop.in  com.mattjakeman.Keyframe.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: keyframe-application.c  keyframe-application.h  keyframe-canvas.c  keyframe-canvas.h  keyframe-composition-manager.c  keyframe-composition-manager.h  keyframe-composition.h  keyframe-control-point-dialog.c  keyframe-control-point-dialog.h  keyframe-export-dialog.c  keyframe-export-dialog.h  keyframe-exporter.c  keyframe-layer-geometry.c  keyframe-layer-geometry.h  keyframe-layer-list.c  keyframe-layer-list.h  keyframe-layer-properties-dialog.c  keyframe-layer-properties-dialog.h  keyframe-layer-text.c  keyframe-layer-text.h  keyframe-layer.c  keyframe-layer.h  keyframe-layers.h  keyframe-renderer.c  keyframe-renderer.h  keyframe-timeline.c  keyframe-timeline.h  keyframe-window.c  keyframe-window.h  keyframe-window.ui  keyframe.gresource.xml  main.c  meson.build
src/export/: export-gstreamer.c  export-gstreamer.h
src/model/: keyframe-composition.c  keyframe-composition.h  keyframe-layer-cool.c  keyframe-layer-cool.h  keyframe-layer-geometry.c  keyframe-layer-geometry.h  keyframe-layer-text.c  keyframe-layer-text.h  keyframe-layer.c  keyframe-layer.h  keyframe-layers.h  keyframe-value-float.c  keyframe-value-float.h
src/res/: control-point-dialog.ui  keyframe.gresource.xml  meson.build  style.css
src/timeline/: keyframe-timeline-channel.c  keyframe-timeline-channel.h  keyframe-timeline-column-view.c  keyframe-timeline-column-view.h  keyframe-timeline-header.c  keyframe-timeline-header.h  keyframe-timeline-menu.c  keyframe-timeline-menu.h  keyframe-timeline-property.c  keyframe-timeline-property.h  keyframe-timeline-track-clip.c  keyframe-timeline-track-clip.h  keyframe-timeline-track-frame.c  keyframe-timeline-track-frame.h  keyframe-timeline-track.c  keyframe-timeline-track.h  keyframe-timeline-tracks.h  keyframe-timeline.c  keyframe-track-clip.c  keyframe-track-clip.h  keyframe-track-frame.c  keyframe-track-frame.h  keyframe-track.c  keyframe-tracks.h
src/timeline/tracks/: keyframe-track-clip-layout.c  keyframe-track-clip-private.h  keyframe-track-clip-widget.c  keyframe-track-clip.c  keyframe-track-clip.h  keyframe-track-frame-layout.c  keyframe-track-frame-point.c  keyframe-track-frame-private.h  keyframe-track-frame.c  keyframe-track.h  keyframe-tracks.h
subprojects/: libadwaita.wrap  libpanel.wrap
